# ferri-log

./: .gitignore  Cargo.toml  docker-compose.yml
application/: Cargo.toml
application/src/: lib.rs
application/src/dto/: disk_log_entry_dto.rs  mapper.rs
application/src/interfaces/: cache.rs  fs.rs  mod.rs
application/src/interfaces/repository/: blacklist_repository.rs  log_repository.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/entities/: log_entry.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/entities/: blacklist_entry.rs  log_entry.rs  log_entry_filter.rs  mod.rs
domain/src/errors/: mod.rs  repository_error.rs
infrastructure/: Cargo.toml  sqlx-data.json
infrastructure/src/: cache.rs  fs.rs  lib.rs  telemetry.rs
infrastructure/src/file_system/: fs.rs  mod.rs  watcher.rs
infrastructure/src/repository/: blacklist_repostiory.rs  log_repository.rs  mod.rs
migrations/: 20220812181232_add_log_entry.sql  20221112160605_add_blacklist_entry.sql
rsyslog-clt/: Dockerfile
server/: Cargo.toml  Dockerfile
server/configuration/: config.toml
server/src/: configuration.rs  main.rs  startup.rs
server/src/middlewares/: auth.rs  mod.rs
server/src/routes/: blacklist.rs  logs.rs  mod.rs
server/tests/: log_repository.rs
src/: lib.rs  main.rs
src/application/dto/: mapper.rs  mod.rs
src/application/interfaces/repository/: log_repository.rs
src/domain/: mod.rs
src/domain/entities/: log_entry.rs  log_entry_filter.rs
src/infrastructure/: cache.rs  mod.rs
src/infrastructure/file_system/: fs.rs  watcher.rs
src/infrastructure/repository/: log_repository.rs
src/server/: configuration.rs  startup.rs
src/server/routes/: logs.rs
tests/: log_repository.rs
web_app/: Cargo.toml  index.html
web_app/src/: main.rs  router.rs
web_app/src/components/: computers.rs  header.rs  logs.rs  mod.rs  not_found.rs
web_app/src/components/logs/: logs_list.rs
web_app/src/models/: log_entry.rs
