[package]
edition = "2021"
name = "application"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.57"
ferri-log-core = {path = "../core"}
serde = {version = "1.0.143", features = ["derive"]}
skytable = "0.7.0-alpha.4"
uuid = "1.1.2"
