[package]
edition = "2021"
name = "application"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.57"
chrono = {version = "0.4.22", features = ["serde"]}
domain = {path = "../domain"}
notify = {version = "6.1.1"}
once_cell = "1.13.1"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
skytable = "0.7.0-alpha.4"
tokio = {version = "1", features = ["full"]}
uuid = {version = "1.1.2", features = ["v4", "serde"]}
