[package]
edition = "2021"
name = "domain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = {version = "0.4.22", features = ["serde"]}
once_cell = "1.13.1"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
uuid = {version = "1.1.2", features = ["v4", "serde"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6.1"
