[package]
edition = "2021"
name = "infrastructure"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
application = {path = "../application"}
async-trait = "0.1.57"
ferri-log-core = {path = "../core"}
lazy_static = "1.4.0"
notify = "4.0.17"
serde_json = "1.0.83"
skytable = "0.7.0-alpha.4"
tracing = {version = "0.1.36", features = ["log"]}
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
uuid = {version = "1.1.2", features = ["v4"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6.1"
