[package]
edition = "2021"
name = "server"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
application = {path = "../application"}
chrono = "0.4.22"
config = "0.13.2"
infrastructure = {path = "../infrastructure"}
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1.0.143", features = ["derive"]}
serde-aux = "3"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.36"
once_cell = "1.13.1"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6.1"
